# CleanupAlgorithm

./: .gitignore  Cleanup.cabal  README.md
app/: Main.hs
src/: Lib.hs
test/: LibSpec.hs
